# DELETEME-AKellner

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.yaml  index.html  justfile  lcov.info  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tox.toml  trivy.yaml
.devcontainer/: bake.hcl  postCreateCommand
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci-buildx-bake.yml  ci-orchestrator.yml  docs.yml  pre-commit.yml  publish.yml
docs/: examples.md  index.md  user-guide.md
examples/: index.html
search/: search_index.json
src/deleteme_akellner/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_deleteme_akellner.py
user-guide/: index.html
