[build-system]
build-backend = "hatchling.build"

requires = [ "hatch-regex-commit", "hatchling" ]

[project]
name = "deleteme-akellner"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"

keywords = [  ]
maintainers = [ { name = "Alon Kellner", email = "akellner@redhat.com" } ]
authors = [ { name = "Alon Kellner", email = "akellner@redhat.com" } ]
requires-python = ">=3.10.0"
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",

  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]

dynamic = [ "version" ]
dependencies = [ "typer" ]

urls = { Homepage = "https://github.com/AlonKellner-RedHat/deleteme_akellner.git", Repository = "https://github.com/AlonKellner-RedHat/deleteme_akellner.git", Bugs = "https://github.com/AlonKellner-RedHat/deleteme_akellner/issues", Changelog = "https://github.com/AlonKellner-RedHat/deleteme_akellner/blob/main/CHANGELOG.md" }

scripts.deleteme_akellner = "deleteme_akellner.cli:app"

[dependency-groups]
dev = [ "coverage[toml]", "pytest", "pytest-cov" ]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.version]
source = "regex_commit"
path = "src/deleteme_akellner/__about__.py"
tag_name = "release/v{new_version}"
commit_message = "bump: version {current_version} → {new_version}"

[tool.pytest.ini_options]
pythonpath = "./"

[tool.coverage.run]
omit = [ "src/deleteme_akellner/__init__.py" ]

[tool.rumdl]
disable = [ "MD052" ]

[tool.lintok]
max_tokens = 2048
exclude = [ "uv.lock", "lcov.info" ]

[tool.typos.files]
extend-exclude = [ "**/.env.*" ]

[tool.uv]
package = true
python-preference = "only-managed"
link-mode = "copy"

[tool.ty.environment]
python = "./.venv"
